syntax = "proto3";

package com.amazonaws.athena.connector.lambda.proto.metadata;

import 'FederatedIdentity.proto';

option java_multiple_files = true;

message ListTablesRequest {
  optional string type = 1 [json_name="@type"];
  optional com.amazonaws.athena.connector.lambda.proto.security.FederatedIdentity identity = 2;
  optional string queryId = 3;
  optional string catalogName = 4;
  optional string schemaName = 5;
  optional string nextToken = 6;
  optional int32 pageSize = 7;
}
